--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,12 @@ IF(APPLE)
 	
 	FIND_LIBRARY(CARBON_LIBRARY Carbon)
 	FIND_LIBRARY(COCOA_LIBRARY Cocoa)
+	
+	SET(CMAKE_MACOSX_RPATH 1)
 ENDIF (APPLE)
+
+# set unique name for swell functions
+ADD_DEFINITIONS(-DSWELL_APP_PREFIX=SWELL_AMBIX)
 
 ################################################
 # INCLUDES
@@ -42,6 +47,33 @@ set (reaper_ambix_sources
 	${CMAKE_CURRENT_SOURCE_DIR}/src/pcmsink_ambix.cpp
 	)
 
+IF(WIN32)
+	# ressource file for gui
+	set (win_resource_files
+		${CMAKE_CURRENT_SOURCE_DIR}/src/res.rc
+		)
+	set(reaper_ambix_sources ${reaper_ambix_sources} ${win_resource_files})
+ENDIF(WIN32)
+
+IF(NOT WIN32)
+	
+	# this filelist is from the swell example: (app_main.cpp)
+	set (swell_sources
+		${CMAKE_CURRENT_SOURCE_DIR}/WDL/swell/swell-dlg.mm
+		${CMAKE_CURRENT_SOURCE_DIR}/WDL/swell/swell-gdi.mm
+		${CMAKE_CURRENT_SOURCE_DIR}/WDL/swell/swell-ini.cpp
+		${CMAKE_CURRENT_SOURCE_DIR}/WDL/swell/swell-kb.mm 
+		${CMAKE_CURRENT_SOURCE_DIR}/WDL/swell/swell-menu.mm 
+		${CMAKE_CURRENT_SOURCE_DIR}/WDL/swell/swell-misc.mm 
+		${CMAKE_CURRENT_SOURCE_DIR}/WDL/swell/swell-miscdlg.mm 
+		${CMAKE_CURRENT_SOURCE_DIR}/WDL/swell/swell-wnd.mm 
+		${CMAKE_CURRENT_SOURCE_DIR}/WDL/swell/swell.cpp 
+		${CMAKE_CURRENT_SOURCE_DIR}/WDL/swell/swell-appstub.mm
+		)
+	
+	set(reaper_ambix_sources ${reaper_ambix_sources} ${swell_sources})
+	
+ENDIF(NOT WIN32)
 
 add_library (reaper_ambix SHARED
 	${reaper_ambix_sources}
